--- a/package.json
+++ b/package.json
@@ -27,6 +27,9 @@
     "@nestjs/mapped-types": "1.2.2",
     "@nestjs/mongoose": "9.2.2",
     "@nestjs/platform-express": "9.4.0",
+    "bcryptjs": "2.4.3",
+    "class-transformer": "0.5.1",
+    "class-validator": "0.14.0",
     "dotenv": "^16.0.3",
     "ejs": "3.1.9",
     "mongoose": "7.1.0",
@@ -37,6 +40,7 @@
     "@nestjs/cli": "9.4.2",
     "@nestjs/schematics": "9.1.0",
     "@nestjs/testing": "9.0.0",
+    "@types/bcryptjs": "^2.4.2",
     "@types/express": "4.17.13",
     "@types/jest": "29.5.0",
     "@types/node": "18.15.11",
