--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "class-transformer": "0.5.1",
     "class-validator": "0.14.0",
     "cookie-parser": "1.4.6",
+    "dayjs": "^1.11.12",
     "dotenv": "^16.0.3",
     "ejs": "3.1.9",
     "mongoose": "7.1.0",
